<resources>
    <string name="app_name">Greedy Goose</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="app_selection">App Selection</string>
    <string name="hours">HH</string>
    <string name="minutes">MM</string>
    <string name="seconds">SS</string>
    <string name="list_of_apps_on_device">List of Apps on Device</string>
    <string name="textview">TextView</string>
    <string name="back_string"><![CDATA[<-]]></string>
    <string name="timer">Timer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>